# agno-team

./: .gitignore  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  scraping_errors.txt  sql.txt
agents/: email_agent.py  emailer_agent.py  product_agent.py  productmanager_agent.py  sql_agent.py
app/: config.py  dependencies.py  main.py
app/agents/: emailer_agent.py  orchestrator_agent.py  product_agent.py  sql_agent.py
app/common/: constants.py  llm_models.py  vector_database.py
app/routes/: query.py
app/utils/: rdb_utils.py  weaviate_utils.py
clean_text/: 3coptics_patchcode.txt  m_cband_tfilter_dicon.txt  m_wdmfiltertc_optizone.txt  mems_3dmatrix_dicon.txt  mems_bswitch_dicon.txt  mems_flexport_switch_dicon.txt  mems_module_dicon.txt  mems_nonlactchswitch_agiltron.txt  mems_rmsm_voa_dicon.txt  mems_tfilter_dicon.txt  mfiber_famout_ixblue.txt  mmld653nm_eagleyard.txt  mpc_optizone.txt  mpx_ixblue.txt  multi_tappd_dicon.txt  multicore-fibercoupler_ks-photonics.txt  nkt_koheras-adjustik.txt  nkt_tm_fiber.txt  oc_agilitron.txt  opal-md_exfo.txt  opal-sd_exfo.txt  opticalamplifier_phoenix.txt  opticaltransceiver_coherent.txt  otdc_coherent.txt  parallelled_kyosemi.txt  pdtia_kyosemi.txt  pm_isolator_optizone.txt  pmfc_optizone-2.txt  pmfc_optizone.txt  pmi_wdmhybrid_optizone.txt  pmic_splitter_optizone.txt  pswitch850_dicon.txt  pulsedlaser_nktp.txt  qamemulator_kylia.txt  qsfp_transceiver_3coptics.txt  quantum_switch_polatis.txt  redled_kyosemi.txt  resininfrared_kyosemi.txt  resinled_kyosemi.txt  scfilter_nktp.txt  (+21 more)
crawlers/: firecrawl_app.py  product_links.txt  scraper.py  scrapy_crawler.py  tavily_crawl.py
crawlers/scraped_content/: products_hc_nktp.md  products_px1_exf0.md
scripts/: weaviate_connection_check.py  weaviate_debug.py  weaviate_diagnos.py  weaviate_ingest_data.py
scripts/product_data/: example_products.txt
vectordb/: weaviate-check.py
(+21 files in other folders)
