[project]
name = "sales-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.7.7",
    "firecrawl>=2.16.5",
    "firecrawl-py>=2.16.5",
    "openai>=1.99.1",
    "packaging>=25.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "scrapy>=2.13.3",
    "sqlalchemy>=2.0.42",
    "tavily-python>=0.7.10",
]
